--- a/镜像仓库/安装内部镜像仓库及存储持久化.md
+++ b/镜像仓库/安装内部镜像仓库及存储持久化.md
@@ -1,9 +1,16 @@
 ## 创建内部镜像仓库并使用持久化存储
-
 按照官方说明，如果安装的时候没有提供共享存储，为了保证 openshift-installer 的安装完成，OpenShift Image Registry Operator 将自身配置为 Removed。 就是说没有安装内部镜像仓库。  
 所以我们需要手动来配置一下。  
 
 https://docs.openshift.com/container-platform/4.3/registry/configuring-registry-operator.html#configuring-registry-operator
+
+可以先查看下对应的 namespace 下的pod，如果没有 image-registry 的pod， 就说明内部仓库没有安装  
+
+```bash
+[root@bastion ~]# oc get pod -n openshift-image-registry
+NAME                                               READY   STATUS        RESTARTS   AGE
+cluster-image-registry-operator-56b55fcd89-4wjkh   2/2     Running       0          4d1h
+```
 
 ### 存储准备
 使用storageclass 提供动态存储，或者提前手动创建一个 100Gi的 RWX 属性的pv，用作给镜像仓库挂载。
@@ -13,17 +20,7 @@ https://docs.openshift.com/container-platform/4.3/registry/configuring-registry-
 如果没有持久化存储，使用 emptydir，但是镜像仓库这个 pod 迁移或重建后数据就丢了，配置方法见下文。 empty 模式下副本数不允许超过1
 
 ### 创建内部仓库
-managementState: Managed  表示安装内部仓库  
-storage-pvc-claim 表示使用持久化存储，会自动创建pvc  
-
-如果使用 emptydir， storage 参数改成如下
-```bash
-    storage:
-      emptyDir: {}
-```
-
-注意 storage 参数必须配置，不然 pod 无法正常启动。
-
+创建配置文件  
 ```bash
 [root@bastion ~]# cat config-imageregistry.yaml
 
@@ -54,6 +51,16 @@ spec:
     pvc:
       claim:
 ```
+managementState: Managed  表示安装内部仓库  
+storage-pvc-claim 表示使用持久化存储，会自动创建pvc  
+
+如果使用 emptydir，即不使用持久化存储， storage 参数改成如下
+```bash
+    storage:
+      emptyDir: {}
+```
+
+注意 storage 参数必须配置，不然 pod 无法正常启动。
 
 导入配置文件
 ` oc apply -f config-imageregistry.yaml `
