--- a/日志与监控/日志系统安装配置.md
+++ b/日志与监控/日志系统安装配置.md
@@ -1,6 +1,10 @@
 ## 查看服务/实例日志与终端使用
 
-服务的日志在日常运维与异常排查中非常重要，以及在运维或者异常情况下，我们需要进入容器查看我们的文件或者执行相关命令进行排查。
+本篇介绍openshift4 日志系统的安装与配置。 openshift4 默认安装没有自带日志系统，需要我们手动通过 operator 安装。  
+如果集群可以联网，可以直接在 web 页面，operatorhub 页面找到 Cluster logging 进行部署。  
+离线环境，需先准备离线的 operatorhub 环境，可参照文章 [离线部署operatorhub并批量导入operator](./operatorhub)
+
+
 
 ### 查看服务日志
 查看服务下所有实例的日志  
