--- a/镜像仓库/安装内部镜像仓库及存储持久化.md
+++ b/镜像仓库/安装内部镜像仓库及存储持久化.md
@@ -12,14 +12,14 @@ NAME                                               READY   STATUS        RESTART
 cluster-image-registry-operator-56b55fcd89-4wjkh   2/2     Running       0          4d1h
 ```
 
-### 存储准备
+### 1. 存储准备
 使用storageclass 提供动态存储，或者提前手动创建一个 100Gi的 RWX 属性的pv，用作给镜像仓库挂载。
 
 [nfs-provisioner提供storageclass动态存储](../存储管理/nfs-provisioner提供storageclass动态存储.md)
 
 如果没有持久化存储，使用 emptydir，但是镜像仓库这个 pod 迁移或重建后数据就丢了，配置方法见下文。 empty 模式下副本数不允许超过1
 
-### 创建内部仓库
+### 2. 创建内部仓库
 创建配置文件  
 ```bash
 [root@bastion ~]# cat config-imageregistry.yaml
