--- a/镜像仓库/安装内部镜像仓库及存储持久化.md
+++ b/镜像仓库/安装内部镜像仓库及存储持久化.md
@@ -62,8 +62,15 @@ storage-pvc-claim 表示使用持久化存储，会自动创建pvc
 
 注意 storage 参数必须配置，不然 pod 无法正常启动。
 
+
 导入配置文件
-` oc apply -f config-imageregistry.yaml `
+```bash
+# 先把已有配置备份下
+oc get config cluster -o yaml > /tmp/config-cluster-back.yaml
+
+# 使用 apply 命令，这样不会覆盖已有配置
+oc apply -f config-imageregistry.yaml
+```
 
 查看pod 和 pvc
 
