--- a/ServiceMesh/2.部署demo-bookinfo.md
+++ b/ServiceMesh/2.部署demo-bookinfo.md
@@ -77,7 +77,7 @@ istio-ingressgateway-istio-system.apps.ocp4.example.com
 浏览器访问以下地址应该可以看到 Bookinfo Sample 的页面，反复刷新，在 Book Reviews 处会有三个结果轮流出现  
 http://istio-ingressgateway-istio-system.apps.ocp4.example.com/productpage
 
-![bookinfo-sample-web.png](../images/服务网格ServiceMesh/bookinfo-sample-web.png)
+![bookinfo-sample-web.png](../images/ServiceMesh/bookinfo-sample-web.png)
 
 整体流量的走向是  
 1. ocp router, 根据域名 istio-ingressgateway-istio-system.apps.ocp4.example.com 将请求转发到了 isotio-system project 下的 istio-ingressgateway
@@ -99,13 +99,13 @@ https://jaeger-istio-system.apps.ocp4.example.com
 在 Jaeger 页面左侧，从 Search - Service 菜单中选择 "productpage.bookinfo" 并点击面板底部的 Find Traces 按钮。此时会显示一个跟踪列表，如下所示：
 （可以多访问几次上面 bookinfo demo 页面，会展示出最新数据）
 
-![jaeger-ui-trace.png](../images/服务网格ServiceMesh/jaeger-ui-trace.png)
+![jaeger-ui-trace.png](../images/ServiceMesh/jaeger-ui-trace.png)
 
 Jaeger 在微服务系统中记录的完整的请求执行过程，并显示为 Trace， Trace 是系统的数据/执行路径。一个端到端的 Trace 由一个或多个 Span 组成。
 
 点开 trace 可以查看到详情， 每个trace 由几个嵌套的 span 组成。span 是 Jaeger 的逻辑工作单元，具有请求名称、请求开始时间、请求持续时间。Span 会被嵌套并排序以展示服务间的关系。
 
-![jaeger-ui-trace-2.png](../images/服务网格ServiceMesh/jaeger-ui-trace-2.png)
+![jaeger-ui-trace-2.png](../images/ServiceMesh/jaeger-ui-trace-2.png)
 
 ### 参考文档
 https://access.redhat.com/documentation/zh-cn/openshift_container_platform/4.5/html/service_mesh/ossm-bookinfo-tutorial#ossm-tutorial-bookinfo-overview_ossm-bookinfo-tutorial
