--- a/image-registry/添加外部加密非安全仓库.md
+++ b/image-registry/添加外部加密非安全仓库.md
@@ -1,5 +1,5 @@
 ## 添加外部仓库
-使用外部image_registry，比如 harbor，nexus 或者由registry 服务创建。  
+使用外部image-registry，比如 harbor，nexus 或者由registry 服务创建。  
 如果仓库是以下情况，需要做一些配置，不然会拉取镜像失败。
 
 1. 外部仓库带用户密码认证
